# multimodal-graph-rag-file-search

./: .gitignore  docker-compose.yml
services/document_processor_service/: Dockerfile  app.py  pyproject.toml
services/document_processor_service/middleware/: __init__.py  security.py
services/document_processor_service/routes/: document_routes.py  health_routes.py
services/document_processor_service/services/: document_service.py
services/rate_limiter_service/: .dockerignore  Dockerfile  app.py  pyproject.toml
services/rate_limiter_service/middleware/: __init__.py
services/rate_limiter_service/routes/: health_routes.py  rate_limiter_routes.py
services/rate_limiter_service/services/: rate_limiter_service.py
test_docs/: dummy_doc_1.txt  dummy_doc_2.txt  dummy_doc_3.txt
