[tool.poetry]
name = "document-processor-service"
version = "1.0.0"
description = "Document processing and chunking service"
authors = ["Fabian Skalski"]
packages = [{include = "document_processor_service"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
pydantic = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
